# ripgrep

./: CHANGELOG.md  Cargo.toml
crates/cli/: Cargo.toml
crates/core/: search.rs
crates/core/flags/: hiargs.rs  lowargs.rs
crates/core/flags/doc/: template.rg.1
crates/globset/: Cargo.toml
crates/grep/: Cargo.toml
crates/ignore/: Cargo.toml
crates/matcher/src/: interpolate.rs  lib.rs
crates/pcre2/: Cargo.toml
crates/printer/: Cargo.toml
crates/printer/src/: standard.rs  util.rs
crates/regex/: Cargo.toml
crates/regex/src/: literal.rs  matcher.rs
crates/searcher/: Cargo.toml
crates/searcher/src/: line_buffer.rs  lines.rs  sink.rs
crates/searcher/src/searcher/: core.rs  glue.rs  mod.rs
pkg/brew/: ripgrep-bin.rb
